MDEV-7927: Server crashes in in Time_and_counter_tracker::incr_loops

- JOIN::save_explain_data should also set JOIN::tracker (it already
  sets join_tab[0].tracker). This is needed for UNIONs inside subqueries.